files/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app: multitool
  type: ClusterIP
  ports:
  - name: multitool
    protocol: TCP
    port: 9002
    targetPort: 80
